--- a/.github/workflows/typing.yml
+++ b/.github/workflows/typing.yml
@@ -26,6 +26,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install ty
 
+      - name: Install package
+        run: |
+          python -m pip install -e .
+
       - name: Run ty
         run: |
           ty check meteostat/
