--- a/.github/workflows/typing.yml
+++ b/.github/workflows/typing.yml
@@ -21,15 +21,11 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install ty
+      - name: Create venv, install deps and run ty
         run: |
+          python -m venv .venv
+          source .venv/bin/activate
           python -m pip install --upgrade pip
           pip install ty
-
-      - name: Install package
-        run: |
-          python -m pip install -e .
-
-      - name: Run ty
-        run: |
+          pip install -e .
           ty check meteostat/
