--- a/.github/workflows/typing.yml
+++ b/.github/workflows/typing.yml
@@ -26,5 +26,5 @@ jobs:
 
       - name: Install dependencies and run ty
         run: |
-          poetry install --with dev --extras extras
+          poetry install --all-groups
           poetry run ty check meteostat/
