--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "meteostat"
 version = "2.0.0"
 description = "Access and analyze historical weather and climate data with Python."
-authors = ["Meteostat"]
+authors = ["Meteostat", "Christian Lamprecht"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
