--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,20 +26,12 @@ jobs:
           virtualenvs-create: true
           virtualenvs-in-project: true
 
-      - name: Install dependencies
-        run: |
-          poetry install --no-root --only main
-
-      - name: Install Twine
-        run: |
-          pip install twine
-
       - name: Build distribution
         run: |
           poetry build
 
-      - name: Check using Twine
-        run: twine check dist/*
-
-      - name: Upload to PyPI
-        run: twine upload -u ${{ secrets.PYPI_USER }} -p ${{ secrets.PYPI_PASSWORD }} dist/*
+      - name: Publish to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          user: ${{ secrets.PYPI_USER }}
+          password: ${{ secrets.PYPI_PASSWORD }}
