feat: add more provider tests

--- a/.github/workflows/provider-tests.yml
+++ b/.github/workflows/provider-tests.yml
@@ -30,6 +30,8 @@ jobs:
           poetry install --all-groups
 
       - name: Run provider tests
+        env:
+          METEOSTAT_USER_AGENT: ${{ secrets.METEOSTAT_USER_AGENT }}
         run: |
           poetry run pytest tests/provider -v
 
