feat: show more logs for provider tests

--- a/.github/workflows/provider-tests.yml
+++ b/.github/workflows/provider-tests.yml
@@ -33,7 +33,7 @@ jobs:
         env:
           METEOSTAT_USER_AGENT: ${{ secrets.METEOSTAT_USER_AGENT }}
         run: |
-          poetry run pytest tests/provider -v
+          poetry run pytest tests/provider -v -s
 
   create-issue:
     name: Create issue on failure
